{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 8,
  "lineage": "1632d9c1-146d-528a-4999-322cd6ac8323",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-072e32c46b1ba4993",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:758483685361:subnet/subnet-072e32c46b1ba4993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072e32c46b1ba4993",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "758483685361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-01f431b16b1d3ca61"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-083c3755df975502f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:758483685361:subnet/subnet-083c3755df975502f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083c3755df975502f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "758483685361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-01f431b16b1d3ca61"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0997d8e3a90a2f36d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:758483685361:subnet/subnet-0997d8e3a90a2f36d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0997d8e3a90a2f36d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "758483685361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-01f431b16b1d3ca61"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0add9aa9189b642e9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:758483685361:subnet/subnet-0add9aa9189b642e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0add9aa9189b642e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "758483685361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-01f431b16b1d3ca61"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0c74a299292e42ee3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:758483685361:subnet/subnet-0c74a299292e42ee3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c74a299292e42ee3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "758483685361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-01f431b16b1d3ca61"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0fb6335977a1ce3a2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:758483685361:subnet/subnet-0fb6335977a1ce3a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb6335977a1ce3a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "758483685361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-01f431b16b1d3ca61"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:758483685361:vpc/vpc-01f431b16b1d3ca61",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04f6eb78078919a32",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0a8e7b52583e5d454",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f431b16b1d3ca61",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fb23ed0be20d07cf",
            "owner_id": "758483685361"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "twenty_crm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-081b0a6eac00b4f53",
            "arn": "arn:aws:ec2:us-east-1:758483685361:instance/i-0c3e3615f7191b867",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3e3615f7191b867",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "task15-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f3d141003e06a387",
            "private_dns": "ip-172-31-14-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.14.30",
            "public_dns": "ec2-44-223-16-152.compute-1.amazonaws.com",
            "public_ip": "44.223.16.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03ea57d124455b6a7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "twenty-crm-task15-fiza-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0add9aa9189b642e9",
            "tags": {
              "Name": "twenty-crm-task15-fiza-ec2",
              "Owner": "fathima-fiza-c-p",
              "Project": "twenty-crm-task15-fiza"
            },
            "tags_all": {
              "Name": "twenty-crm-task15-fiza-ec2",
              "Owner": "fathima-fiza-c-p",
              "Project": "twenty-crm-task15-fiza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095cbe16725786fb9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "data.aws_subnet.all",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "twenty_crm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:758483685361:loadbalancer/app/twenty-crm-task15-fiza-alb/db5691fb8b56b71f",
            "arn_suffix": "app/twenty-crm-task15-fiza-alb/db5691fb8b56b71f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "twenty-crm-task15-fiza-alb-1418832672.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:758483685361:loadbalancer/app/twenty-crm-task15-fiza-alb/db5691fb8b56b71f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "twenty-crm-task15-fiza-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0be38879bf8d08535"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-072e32c46b1ba4993"
              },
              {
                "subnet_id": "subnet-083c3755df975502f"
              },
              {
                "subnet_id": "subnet-0997d8e3a90a2f36d"
              },
              {
                "subnet_id": "subnet-0add9aa9189b642e9"
              },
              {
                "subnet_id": "subnet-0c74a299292e42ee3"
              },
              {
                "subnet_id": "subnet-0fb6335977a1ce3a2"
              }
            ],
            "subnets": [
              "subnet-072e32c46b1ba4993",
              "subnet-083c3755df975502f",
              "subnet-0997d8e3a90a2f36d",
              "subnet-0add9aa9189b642e9",
              "subnet-0c74a299292e42ee3",
              "subnet-0fb6335977a1ce3a2"
            ],
            "tags": {
              "Name": "twenty-crm-task15-fiza-alb",
              "Owner": "fathima-fiza-c-p",
              "Project": "twenty-crm-task15-fiza"
            },
            "tags_all": {
              "Name": "twenty-crm-task15-fiza-alb",
              "Owner": "fathima-fiza-c-p",
              "Project": "twenty-crm-task15-fiza"
            },
            "vpc_id": "vpc-01f431b16b1d3ca61",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnet.all",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:758483685361:listener/app/twenty-crm-task15-fiza-alb/db5691fb8b56b71f/83d923f48d52d4da",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:758483685361:targetgroup/twenty-crm-task15-fiza-tg/248cbee8c5477d46",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:758483685361:listener/app/twenty-crm-task15-fiza-alb/db5691fb8b56b71f/83d923f48d52d4da",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:758483685361:loadbalancer/app/twenty-crm-task15-fiza-alb/db5691fb8b56b71f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.twenty_crm",
            "aws_lb_target_group.twenty_crm",
            "aws_security_group.alb_sg",
            "data.aws_subnet.all",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "twenty_crm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:758483685361:targetgroup/twenty-crm-task15-fiza-tg/248cbee8c5477d46",
            "arn_suffix": "targetgroup/twenty-crm-task15-fiza-tg/248cbee8c5477d46",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:758483685361:targetgroup/twenty-crm-task15-fiza-tg/248cbee8c5477d46",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "twenty-crm-task15-fiza-tg",
            "port": 2020,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "twenty-crm-task15-fiza-tg",
              "Owner": "fathima-fiza-c-p",
              "Project": "twenty-crm-task15-fiza"
            },
            "tags_all": {
              "Name": "twenty-crm-task15-fiza-tg",
              "Owner": "fathima-fiza-c-p",
              "Project": "twenty-crm-task15-fiza"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01f431b16b1d3ca61"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "twenty_crm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:758483685361:targetgroup/twenty-crm-task15-fiza-tg/248cbee8c5477d46-20260915164947367800000002",
            "port": 2020,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:758483685361:targetgroup/twenty-crm-task15-fiza-tg/248cbee8c5477d46",
            "target_id": "i-0c3e3615f7191b867"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.twenty_crm",
            "aws_lb_target_group.twenty_crm",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "data.aws_subnet.all",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:758483685361:security-group/sg-0be38879bf8d08535",
            "description": "Security group for the Twenty CRM ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be38879bf8d08535",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "twenty-crm-task15-fiza-alb-sg",
            "name_prefix": "",
            "owner_id": "758483685361",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "twenty-crm-task15-fiza-alb-sg",
              "Owner": "fathima-fiza-c-p",
              "Project": "twenty-crm-task15-fiza"
            },
            "tags_all": {
              "Name": "twenty-crm-task15-fiza-alb-sg",
              "Owner": "fathima-fiza-c-p",
              "Project": "twenty-crm-task15-fiza"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f431b16b1d3ca61"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:758483685361:security-group/sg-095cbe16725786fb9",
            "description": "Security group for the Twenty CRM EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095cbe16725786fb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "App traffic from the ALB only",
                "from_port": 2020,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0be38879bf8d08535"
                ],
                "self": false,
                "to_port": 2020
              }
            ],
            "name": "twenty-crm-task15-fiza-ec2-sg",
            "name_prefix": "",
            "owner_id": "758483685361",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "twenty-crm-task15-fiza-ec2-sg",
              "Owner": "fathima-fiza-c-p",
              "Project": "twenty-crm-task15-fiza"
            },
            "tags_all": {
              "Name": "twenty-crm-task15-fiza-ec2-sg",
              "Owner": "fathima-fiza-c-p",
              "Project": "twenty-crm-task15-fiza"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f431b16b1d3ca61"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}